# chat-rs

./: .editorconfig  .eslintrc.js  .gitignore  Cargo.toml  README.md  Rocket.toml  package.json  tsconfig.json
chat/: Cargo.toml
chat/migrations/2020-06-06-103545_create_posts/: up.sql
chat/migrations/2020-06-07-122852_create_files/: up.sql
chat/migrations/2020-06-21-170415_create_notifications/: up.sql
chat/migrations/2020-07-02-134556_create_favorite_files/: up.sql
chat/src/: lib.rs  schema.rs
chat/src/models/: files.rs  message_parser.rs  notifications.rs  posts.rs
chat/src/repositories/: files.rs  mod.rs  notifications.rs
chat_web/: Cargo.toml
chat_web/src/: main.rs  ws.rs
chat_web/src/routes/: files.rs  mod.rs  notifications.rs  posts.rs  thumbnails.rs  types.rs
data/: Cargo.toml
data/migrations/2020-06-21-161106_add_post_author_column/: down.sql  up.sql
data/migrations/2020-07-02-134556_create_favorite_files/: down.sql
data/src/: lib.rs  schema.rs
data/src/models/: files.rs  message_parser.rs  mod.rs  posts.rs
data/src/repositories/: files.rs  mod.rs  notifications.rs  posts.rs
frontend/: anim.ts  config.example.ts  config.ts  declarations.d.ts  event-emitter.ts  index.html  index.ts  menu.ts  stores.ts  types.ts  utils.ts  ws.ts
frontend/components/: AudioPlayer.svelte  AuthModal.svelte  Embed.svelte  Gallery.svelte  GalleryFile.svelte  MediaBox.svelte  Menu.svelte  Post.svelte  PostForm.svelte  PostImagePreview.svelte  PostList.svelte  PostPopups.svelte  RichTextBox.svelte  RichTextBox.ts  TextBox.svelte  VideoPlayer.svelte  embed.ts  file.ts  gallery.ts  markup.ts  post.ts
frontend/components/Menu/: MenuNotificationList.svelte  MenuNotificationPopupList.svelte
frontend/components/Notifications/: NotificationFooter.svelte  PostNotification.svelte  PostNotificationFile.svelte  SystemNotification.svelte
frontend/models/: Notification.ts  NotificationPopup.ts
frontend/services/: api.ts  coub.ts  sso.ts  tenor.ts  tiktok.ts  youtube.ts
frontend/stores/: NotificationPopups.ts  Notifications.ts  auth.ts  files.ts  notifications.ts  post_popups.ts  posts.ts
frontend/styles/: audio-player.scss  auth-modal.scss  auth.scss  base.scss  controls.scss  gallery.scss  index.scss  layout.scss  markup.scss  media-box.scss  menu.scss  mixins.scss  notification.scss  post-form.scss  post-list.scss  post-popups.scss  post.scss  reflink.scss  tooltip.scss  vars.scss  video-player.scss
web/: Cargo.toml
web/src/: main.rs  requests.rs  ws.rs
web/src/routes/: files.rs  mod.rs  notifications.rs  posts.rs  thumbnails.rs  types.rs
www/: .gitignore  index.html  robots.txt  site.webmanifest
