[package]
name = "web"
version = "1.0.0"
authors = ["Nina Lisitsinskaya <vvatashi@protonmail.com>"]
edition = "2018"

[dependencies]
data = { path = "../data" }
diesel = { version = "1.4.4", features = ["postgres"] }
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["databases", "diesel_postgres_pool", "json", "serve"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
