[package]
name = "web"
version = "1.0.0"
authors = ["Nina Lisitsinskaya <vvatashi@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data = { path = "../data" }
diesel = { version = "1.4.4", features = ["postgres"] }
image = "0.23.5"
mime = "0.3.16"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["databases", "diesel_postgres_pool", "json", "serve"] }
rocket-multipart-form-data = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.10.1"
